--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,31 +1,20 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
-client_id = "your_api_key_here"
-application_url = "https://example.com/"
+client_id = "8e1eff961dfcde68023c02298b85b5f9"
+organization_id = "76740735"
+name = "dh-shop-agent"
+application_url = "https://dh-shop-agent.daily-harvest-master-cloudflare-account.workers.dev"
 embedded = true
-name = "cf-worker-shopify"
-handle = "cf-worker-shopify"
 
 [build]
-include_config_on_deploy = true
+automatically_update_urls_on_dev = true
 
 [webhooks]
-api_version = "2025-04"
-
-  [[webhooks.subscriptions]]
-  topics = [ "app/uninstalled" ]
-  uri = "/webhooks/app/uninstalled"
-
-  [[webhooks.subscriptions]]
-  topics = [ "app/scopes_update" ]
-  uri = "/webhooks/app/scopes_update"
+api_version = "2025-07"
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
 scopes = "write_products"
 
 [auth]
-redirect_urls = [ "https://example.com/api/auth" ]
-
-[pos]
-embedded = false
+redirect_urls = [ "https://shopify.dev/apps/default-app-home/api/auth" ]
