--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -18,9 +18,9 @@
     }
   ],
   "vars": {
-    "SHOPIFY_API_KEY": "your_api_key_here", // Don't use this in production, use secrets in the dashboard https://developers.cloudflare.com/workers/configuration/secrets/#adding-secrets-to-your-project
-    "SHOPIFY_API_SECRET": "your_api_secret_here", // Don't use this in production, use secrets in the dashboard https://developers.cloudflare.com/workers/configuration/secrets/#adding-secrets-to-your-project
-    "SHOPIFY_APP_URL": "https://example.workers.dev", // adjust as needed
+    "SHOPIFY_API_KEY": "8e1eff961dfcde68023c02298b85b5f9", // Don't use this in production, use secrets in the dashboard https://developers.cloudflare.com/workers/configuration/secrets/#adding-secrets-to-your-project
+    //"SHOPIFY_API_SECRET": "your_api_secret_here", // Don't use this in production, use secrets in the dashboard https://developers.cloudflare.com/workers/configuration/secrets/#adding-secrets-to-your-project
+    "SHOPIFY_APP_URL": "https://dh-shop-agent.daily-harvest-master-cloudflare-account.workers.dev", // adjust as needed
     "SCOPES": "write_products" // adjust scopes as needed
   }
 }
