--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@shopify/shopify-app-session-storage-prisma": "^6.0.6",
     "isbot": "^5.1.26",
     "prisma": "^6.6.0",
+    "@anthropic-ai/sdk": "^0.40.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
+    
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250404.0",
